[package]
name = "taichi-agent"
version = "0.1.0"
authors = ["Frost Red Lee <frostredlee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio = {version = "0.2", features = ["full"]}
reqwest = { version = "0.10", features = ["json"] }
log = "0.4"
fern = {version = "0.6", features = ["colored"]}
chrono = "0.4"
ethereum-types = "0.9"
parity-crypto = "0.6"
hex = "0.4"
structopt = "0.3"
num_cpus = "1.13"

[build-dependencies]
tonic-build = "0.3"

[dev-dependencies]